# simulator

./: BigOrEqual.cpp  BigOrEqual.h  Bigger.cpp  Bigger.h  BinaryOperator.cpp  BinaryOperator.h  CMakeLists.txt  ChangeCommand.h  Command.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.h  DefineVarCommand.h  Div.cpp  Div.h  Equal.cpp  Equal.h  IfCommand.cpp  IfCommand.h  InformationVar.h  Interpreter.cpp  Interpreter.h  LoopCommand.cpp  LoopCommand.h  Minus.cpp  Minus.h  Mul.cpp  Mul.h  OpenServerCommand.h  Parser.cpp  Parser.h  Plus.cpp  Plus.h  Print.h  README.md  SimbolTable.h  Sleep.cpp  Sleep.h  SmallOrEqual.cpp  SmallOrEqual.h  (+16 more)
